--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.botao-verde {
+    @apply text-gray-100 text-xl bg-green-600 w-full pb-5 pl-12 hover:bg-green-700;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.botao-vermelho {
+    @apply text-gray-100 text-xl bg-red-600 w-full pb-5 pl-12 hover:bg-red-700;
+}
+
+.botao-cinza {
+    @apply text-gray-100 text-xl bg-gray-600 w-full pb-5 pr-12 hover:bg-gray-700;
 }
